--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 }
 
 .container {
-  text-align: center;
-  margin: 220px auto;
-  border: thick double rgb(202, 202, 202);
-  border-radius: 10px;
-  width: 25%;
-  background-color: rgb(248, 248, 248);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 50%;
+  height: 100vh;
 }
